--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,21 +4,16 @@ services:
   db:
     container_name: db
     image: postgres:13
-    environment:
-      POSTGRES_DB: transendence
-      POSTGRES_USER: nahyulee
-      POSTGRES_PASSWORD: 1234
-      POSTGRES_HOST: db
-      DJANGO_SUPERUSER_USERNAME: admin
-      DJANGO_SUPERUSER_EMAIL: admin@example.com
-      DJANGO_SUPERUSER_PASSWORD: adminpassword
+    env_file: .env
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     restart: always
     networks:
       - mynetwork
 
-  frontend:
+  front:
     container_name: front
     build: ./frontend
     ports:
@@ -34,19 +29,15 @@ services:
     build: ./backend
     ports:
       - "8000:8000"
-    environment:
-      POSTGRES_DB: transendence
-      POSTGRES_USER: nahyulee
-      POSTGRES_PASSWORD: 1234
-      POSTGRES_HOST: db
-      DJANGO_SUPERUSER_USERNAME: admin
-      DJANGO_SUPERUSER_EMAIL: admin@example.com
-      DJANGO_SUPERUSER_PASSWORD: adminpassword
+    env_file: .env
     depends_on:
       - db
     restart: always
     networks:
       - mynetwork
+
+volumes:
+  postgres-data:
 
 networks:
   mynetwork:
